--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,14 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
-  </ion-toolbar>
+  <ion-toolbar> <ion-title> Songs </ion-title> </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let song of (songs$ | asyncNoZone) as songs; index as i">
+      <ion-thumbnail slot="start">
+        <ion-img [src]="song.img"></ion-img>
+      </ion-thumbnail>
+      <ion-label>{{ song.name }}</ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
