--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,4 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="flash"></ion-icon>
@@ -8,7 +7,7 @@
 
     <ion-tab-button tab="tab2">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-label>Songs</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
@@ -16,5 +15,4 @@
       <ion-label>Tab Three</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
